# DevOps-Toolkit

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
.azure-pipelines/templates/: formatter_isort_v01.yml  install_pip_editable_v01.yml  install_poetry_requirements_v01.yml  linter_pylint_v01.yml  scanner_bandit_v01.yml  scanner_trufflehog_v01.yml  test_pytest_v01.yml  typechecker_pyright_v01.yml
.azuredevops/templates/: deploy_artifacts_python_wheel_v01.yml  extract_pyproject_metadata_v01.yml  formatter_black.yml  formatter_black_v01.yml  formatter_ruff.yml  formatter_ruff_v01.yml  linter_flake8_v01.yml  linter_pylint_v01.yml  linter_ruff.yml  (+24 more)
.devcontainer/: Dockerfile  README.md  devcontainer.md  docker-compose.yml
.dotfiles/: .zshrc  install.sh
.tools/: .bandit  .devskim  .gitleaks.toml  .mypy.ini  .pylintrc  .vulture  README.md  pyrightconfig.json  pytest.ini  ruff.toml
docs/: 2025-01-20-shared-configuration-architecture.md
hello_world/: .devcontainer.code-workspace  README.md  azure-pipelines.yml  pyproject.toml  semgrep-junit.xml
lakehouse/: README.md  cdktf.json  install  pyproject.toml
lakehouse/src/lakehouse/: main.py
library_b/: readme.md
stratum/: README.md  cdktf.json  pyproject.toml
stratum/config/init/: dev.init.json
stratum/src/stratum/: __main__.py  constants.py
stratum/src/stratum/constructs/level0/: resource_group.py  storage_account.py  storage_container.py
stratum/src/stratum/constructs/level1/: storage_account_locked.py
stratum/src/stratum/constructs/level2/: terraform_backend.py
stratum/src/stratum/stacks/: terraform_backend.py
stratum/tests/: main-test.py  main_test.py
tests/: conftest.py  test_always_fail.py  test_always_pass.py
(+143 files in other folders)
